names for storeys, rooms and doors; used in OSM only